# tggame

./: .cz.toml  .env.default  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  default.nix
.cargo/: config.toml
.github/workflows/: bumpversion.yml  ci.yml
migrations/2023-04-21-121052_create_players/: up.sql
migrations/2023-04-21-154841_create_games/: down.sql  up.sql
migrations/2023-04-23-114734_create_roles/: up.sql
migrations/2023-05-23-091043_create_ingame_players/: down.sql  up.sql
migrations/2023-06-07-125607_actions/: down.sql  up.sql
src/: app.rs  commands.rs  game.rs  main.rs  schema.rs  services.rs  utility.rs
src/commands/: direct_commands.rs  group_commands.rs  tutorial_commands.rs
src/commands/group_commands/: start_game.rs
src/commands/tutorial_commands/: roles.rs
src/game/: actions.rs  cheats.rs  game_status.rs  ingame_player.rs  player.rs  role.rs  time_of_day.rs  win_conditions.rs
src/game/actions/: kill.rs  seer.rs  werewolf.rs  win.rs
src/game/cheats/: kill.rs
src/services/: bootstrap.rs  database.rs  environment_variables.rs  seeds.rs
src/utility/: bot.rs  game.rs  string.rs  uuid.rs
src/utility/bot/: keyboard.rs  message.rs  user.rs
