[package]
name = "tggame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
diesel = { version = "2.0.0", features = ["postgres", "numeric", "uuid"] }
dotenvy = "0.15.7"
uuid = "1.3.1"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
strum = "0.24.1"
strum_macros = "0.24.3"
